examples/valid/inequality.lama
int a = 25 ;
int b = 9 ;
bool x = a != b ;
print x ;
print (16 == a) ;

double c = 1.2 ;
double d = 3.4 ;
bool y = c != d ;
print y ;
print (1.2 != c) ;

bool e = true ;
bool f = false ;
bool z = e != f ;
print z ;
print (e != f) ;