examples/invalid/unknown_var.lama
int a = 1 ;
bool b = true ;
double c = 11.1 ;
d = d + 12 ;
print d;